# vlc-pip

./: .gitignore  LICENSE  README.md  SPEC.md  VlcPip.slnx
.github/workflows/: ci.yml  close-prs.yml
docs/: ARCHITECTURE.md  SPEC.md
docs/plans/: 2026-07-02-rust-rewrite.md  2026-07-02-v21-gestures.md  2026-07-02-vlc-pip.md
extension/: pip.lua
helper/: Cargo.toml  Daemon.cs  Native.cs  PipGeometry.cs  PipHelper.csproj  PipState.cs  Program.cs  RequestFile.cs
helper.Tests/: GeometryTests.cs  PipHelper.Tests.csproj  RequestTests.cs  StateTests.cs
helper/src/: daemon.rs  geometry.rs  main.rs  native.rs  options.rs  request.rs  state.rs  tests.rs
helper/src/geometry/: tests.rs
helper/src/native/: tests.rs
helper/src/options/: tests.rs
helper/src/request/: tests.rs
helper/src/state/: tests.rs
scripts/: common.ps1  common.tests.ps1  install.ps1  smoke-test.ps1  test-intf.lua  uninstall.ps1
